--- a/Study/study/src/styles/App.css
+++ b/Study/study/src/styles/App.css
@@ -12,50 +12,55 @@ body{
 }
 
 .header {
-    padding: 1vh;
+    padding: 1vh 1vh 1vh 1vh;
     background: #011627;
-    display: flex;
-    /* Align to the right */
-    width: 100%;
+    width:100%;
+    max-height: 10vh;
+    align-items: center;
+    display:flex;
+    justify-content: space-between;
+    position: sticky;
+  } 
 
-  }
-  
-  .pages {
-    display: flex;
-    justify-content: space-between; /* Distribute links with space between them */
-    width: 30%;
-    margin-right: 10vh; /* To align to the right */
- 
-  }
-  
-
-
-  
-.websiteName{
+.title{
     cursor:pointer;
-    flex:1;
-    padding-left: 5%;
-    margin-top: 1vh;
-    font-size:4vh;
+    padding-left: 0%;
     font-family: "Roboto", sans-serif;
     color:aliceblue;
+
+    align-items: center;
+    transition:.3s;
+    display:flex;
+    padding: .2%;
+    flex-shrink: 0;
+    min-height: 100%;
+    left: 10%;
+
+
 }
 
-
- .header svg {
-    height: 100%;
- }
-
-
-.sidenav{
-    width: 240px;
-    position: absolute;
-    height : 95vh;
-    background: #011627;
-padding :0 30px;
-transition : all 1s;
-left:-100%;
+.title:hover{
+    border-radius: 20px;
+    box-shadow: 0 0 11px white;
 }
+h1{
+    width:10px;
+    padding: 0;
+    margin: 0;
+
+}
+
+ .pages {
+    
+    display: flex;
+    justify-content: space-between;
+   
+    width:30%;
+    align-items: center;
+    padding-right: 10vh;
+  }  
+
+
 .sidenav.active{
     left:0;
 }
@@ -77,50 +82,143 @@ ul li a{
     padding-right: 0px;
     border-radius: 10px;
     width: 100%;
+    transition:.3s;
     
+
 }
  .title{
     left: 10%;;
     justify-content: center;
     align-items: center;
     display:flex;
-    width: fit-content;
+  
  }
 .brain{
     width:10%;
+    left: 10%;
 }
 
-ul li a:hover {
-    background: #172b4d;
-    border-radius: 20px;
-    box-shadow: 0 0 11px white; }
 
- ul li a:active{
-    background :#172b4d;
- }
 
- .logout{
-    bottom :20px;
-
- }
 
  .header h1{
     flex:1;
     padding-left: 5%;
     margin-top: 2%;
  }
- .header{
-    max-height: 10vh;
-    align-items: center;
-    display:flex;
- }
+
 
  .main{
      height: 90vh;
      display:flex;
      justify-content: center;
      align-items: center;
-     font-size: 40px;
+     font-size: 60px;
      color: #011627;
-
+    width:100%;
+    
  }
+
+
+ .menu-trigger img {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #f5f5f5; /* Light color */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  background-color: #f5f5f5; /* Light color */
+  border-radius: 10px;
+  padding: 10px 20px;
+  width: 200px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  max-height: 75vh; /* Take no more than 75% of the screen */
+  overflow: auto; /* Add scroll if necessary */
+  text-align: center; /* Center text */
+}
+.dropdown-menu::before{
+  content: '';
+  position: absolute;
+  top: -5px;
+  right: 20px;
+  height: 20px;
+  width: 20px;
+  background: var(--secondary-bg);
+  transform: rotate(45deg);
+}
+
+.dropdown-menu.active{
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: var(--speed) ease;
+}
+
+.dropdown-menu.inactive{
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-20px);
+  transition: var(--speed) ease;
+}
+h3 {
+  font-size: 18px;
+  padding: 20px 0;
+  font-weight: 500;
+  color: #333; /* Change text color */
+  line-height: 1.2rem;
+  white-space: nowrap; /* Ensure text is on one line */
+}
+
+h3 span {
+  font-size: 14px;
+  color: #777; /* Change secondary text color */
+  font-weight: 400;
+}
+
+.dropdown-menu ul li {
+  padding: 10px 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dropdown-menu ul li a {
+  color: #333; /* Change text color */
+  transition: color 0.3s ease-in-out, font-weight 0.3s ease-in-out; /* Add transition for text color and font-weight */
+}
+
+.dropdown-menu ul li:hover a {
+  color: #d42109; /* Change text color on hover */
+  font-weight: bold; /* Make the text bold on hover */
+  cursor: pointer;
+}
+
+.dropdownItem {
+  display: flex;
+  align-items: center; /* Center icons vertically */
+  margin: 10px auto;
+}
+
+.dropdownItem img {
+  width: 20px; /* Adjust image size */
+  height: 20px; /* Adjust image size */
+  margin-right: 10px;
+  opacity: 0.5;
+}
+
+.dropdownItem a {
+  max-width: 100px;
+  color: #333; /* Change text color */
+  transition: color 0.3s ease-in-out;
+}
