--- a/Study/study/src/pages/Auth/Auth.css
+++ b/Study/study/src/pages/Auth/Auth.css
@@ -1,15 +1,27 @@
 
-.auth{
+.auth {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  top:0;
+  top: 0;
   height: 90vh;
   background-color: #f2f2f2;
   background-image: url('https://images.unsplash.com/photo-1488229297570-58520851e868?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-  background-size: cover; /* Adjust as needed */
-  background-position: center; /* Adjust as needed */
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
+}
+
+.alert {
+  position: absolute;
+  top: 5%;
+  left: 50%; /* Center horizontally */
+  transform: translateX(-50%); /* Center horizontally */
+  background-color: red; /* Adjust the background color as needed */
+  padding: 10px;
+  border-radius: 5px;
+  color: white; /* Adjust text color */
 }
 
 .form {
@@ -20,13 +32,9 @@
   padding: 30px;
   width: 450px;
   border-radius: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  justify-content: center;
-  
-
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-s;
 
 }
-
 ::placeholder {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
