--- a/Study/study/src/Levels/Levels.css
+++ b/Study/study/src/Levels/Levels.css
@@ -65,10 +65,30 @@ h1 {
   .question{
     color: black;
   }
-  .level{
-    color:black;
-    
+  .level {
+    overflow-y: auto !important;
+    max-height: 80vh;
+    min-height: 20vh;
+    display: grid;
+    place-items: center;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow-y: scroll; /* Enable vertical scrolling */
   }
+  
+
+  
+  .pagehead {
+    font-size: 36px;
+    font-weight: 300;
+    margin-bottom: 20px;
+  }
+  
+ 
+  
+  
+  
   .levels{
     color:black;
 text-decoration: underline;    font-size: 50px;
@@ -224,16 +244,29 @@ content: '';
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   justify-content: center;
-  height: 100vh;
+  height: 70vh;
   background-color: #f5f5f5;
   padding: 2rem;
-}
+  border: #252525; 
+  border-radius: 20px;
+  width: 60%;
 
+}
+.all{
+  background-color: #f5f5f5;
+  justify-content: center;
+  align-items: center;
+
+
+}
 .thislevel {
   font-size: 2.5rem;
   color: #333;
   margin-bottom: 1rem;
+  justify-content: center;
+  text-align: center;
 }
 
 p {
@@ -327,4 +360,9 @@ p {
 
 .type1:hover::before {
   transform: translateY(-50px) scale(0) rotate(120deg);
+}
+
+.alerts{
+  width: 100%;
+  z-index: 20;
 }
