--- a/Study/study/src/Levels/Levels.css
+++ b/Study/study/src/Levels/Levels.css
@@ -366,3 +366,10 @@ p {
   width: 100%;
   z-index: 20;
 }
+
+
+.currentquestion{
+  justify-content: center;
+  text-align: center;
+  left: 50%;
+}
