--- a/Study/study/src/Levels/Levels.css
+++ b/Study/study/src/Levels/Levels.css
@@ -183,6 +183,11 @@ background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 10
   outline: none;
   position: relative;
   padding: 10px;
+  display: block;
+  margin-top:60px;
+  margin-bottom: 20%;
+  margin-left: 5%;
+
   }
 
 .answerbutton::before {
@@ -263,10 +268,11 @@ content: '';
 }
 .thislevel {
   font-size: 2.5rem;
-  color: #333;
+  color: black;
   margin-bottom: 1rem;
-  justify-content: center;
-  text-align: center;
+  margin-right: 13vh;
+  
+  
 }
 
 p {
@@ -282,9 +288,10 @@ p {
 }
 
 .thequestion {
-  font-size: 1.2rem;
+  font-size: 30px;
   color: #333;
   margin-bottom: 1rem;
+  margin-top: 30vh;
 }
 
 .answer {
@@ -369,7 +376,12 @@ p {
 
 
 .currentquestion{
-  justify-content: center;
+  margin-top:5%;
   text-align: center;
-  left: 50%;
+  
+  margin-left: 27vh;
+  width:70%;
+  display: flex;
+  border-radius: 20px;
+  border: #252525;
 }
